--- a/html.html
+++ b/html.html
@@ -98,7 +98,7 @@
     Add to Cart
   </button>
   <button class="buy_now_button">
-    Buy now
+    Buy now buy now buy now
   </button>
 </body>
 </html>
