--- a/html.html
+++ b/html.html
@@ -90,6 +90,7 @@
   <p class="stock">
     $39-in stock.
   </p>
+  <img src="Screenshot (27).png" >
   <p class="free">
   Free delivery tomorrow
   </p>
