--- a/html.html
+++ b/html.html
@@ -94,12 +94,17 @@
   <p class="free">
   Free delivery tomorrow
   </p>
-  
+  <div>
+    <h3>ariana
+    </h3>
+    <h5>look mama</h5>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem, nulla deleniti? Corporis, modi quisquam! Officiis, non cum. Fugit voluptatibus eligendi ipsam rerum harum, cum totam quas atque animi asperiores ducimus!</p>
+  </div>
   <button class="add_to_cart_button">
     Add to Cart
   </button>
   <button class="buy_now_button">
-    Buy now buy now buy nothing
+    Buy now buy hell now buy nothing
   </button>
 </body>
 </html>
